fix: overflow issues

--- a/src/components/gallery/museum.sass
+++ b/src/components/gallery/museum.sass
@@ -5,6 +5,7 @@ main
   overflow: scroll hidden
 
 #gallery
+  // max-height: 20%
   height: calc(100% - $component-padding * 2)
   padding: $component-padding
   gap: 2em
@@ -26,18 +27,25 @@ main
     height: 100%
     display: flex
     align-items: center
+    overflow: hidden
+    border-radius: 10px
+    box-shadow: 0px 0px 10px var(--darker-blue)
+
 
     .bg
       position: absolute
       inset: 0
-      background-size: cover
+      background-size: 100% 100%
+      background-repeat: no-repeat
       filter: blur(20px)
       z-index: -1
     
 
   .flip-card:hover .inner-card
     transform: rotateY(180deg)
-    backface-visibility: hidden
+    // backface-visibility: hidden
+    overflow: visible
+    box-shadow: 0px 0px 10px var(--darker-blue)
 
   .flip-card
     height: stretch
